# marco-polo-rs

./: .dockerignore  .env  .example.env  .exemple.env  .gitignore  Cargo.toml  README.md  build-cli.sh  curl.txt  do-ca-certificate.crt  sqlx-data.json  yt-client-secret.json
.aws/: api-ecs-task-definition.json
.github/: PULL_REQUEST_TEMPLATE.md
.sqlx/: query-019cee7e3d6654133d49d93740d7b756e14987e6343361524ae298aed933f06e.json  query-027160951ae202f2a946bdc1198a86c1e12f7cddf2529cb55d215c261c7bcb9a.json  query-062fa7cd4a2bc8812c09ef8966197d6e698b76c1a4ee872056a9305be23a7a52.json  query-170a19b7cabf50c4a80febf3f7744aa97174deebc5a5beb7c96dd650fe814d8b.json  query-17cfef85654234e80c2d291172c9b6226295a210d60fb94d1b5f7fb7c7b643b2.json  (+71 more)
api/: Cargo.toml  Dockerfile
api/src/: main.rs
api/src/auth/: mod.rs
api/src/controllers/: mod.rs
api/src/controllers/assembly_ai/: mod.rs  models.rs  service.rs  state.rs
api/src/controllers/channel/: mod.rs  youtube.rs
api/src/controllers/channel/dto/: mod.rs
api/src/controllers/channel/dtos/: mod.rs
api/src/controllers/channel/test/: mod.rs
api/src/controllers/channel/test/fixtures/: channel.sql  channels.sql
api/src/controllers/storage/: mod.rs  state.rs
api/src/controllers/storage/test/: mod.rs
api/src/controllers/test/: mod.rs
api/src/controllers/test/fixtures/: admin.sql  channels.sql  forgotten_users.sql  original_video.sql  video.sql  video_error.sql  video_errors.sql  videos.sql
api/src/controllers/test/mock/: cloud_service.rs  mailer.rs  mod.rs  youtube_client.rs
api/src/controllers/test/mock/video_platform/: youtube.rs
api/src/controllers/user/: mod.rs
api/src/controllers/user/dtos/: create.rs  find.rs  forgot.rs  login.rs  mod.rs
api/src/controllers/user/test/: mod.rs
api/src/controllers/user/test/fixtures/: dumb.sql  user.sql
api/src/controllers/video/: mod.rs  service.rs  state.rs
api/src/controllers/video/dtos/: create.rs  mod.rs
api/src/controllers/video/test/: create.rs  mod.rs
api/src/controllers/video/test/fixtures/: admin.sql  user.sql  video.sql  videos.sql
api/src/mail/: mod.rs
api/src/mail/engine/: handlebars.rs  mod.rs
api/src/mail/sender/: lettre.rs  mod.rs
api/src/middleware/: jwt_token.rs  mod.rs
api/src/models/: error.rs  result.rs
api/src/utils/: test.rs
api/templates/: forgot-password.hbs
cli/: Cargo.toml
cli/src/: api.rs  args.rs  keys.rs  main.rs  srt.rs
core/: Cargo.toml
core/src/: env.rs  lib.rs
core/src/database/: mod.rs
core/src/database/models/: channel.rs  mod.rs  original_video.rs  traits.rs  user.rs  video.rs  video_channel.rs  video_error.rs  video_storage.rs  video_subtitling.rs
core/src/database/models/channel/: mod.rs  platform.rs
core/src/database/models/channel/auth/: auth_type.rs  data.rs  mod.rs
core/src/database/models/many_to_many/: mod.rs  video_channel.rs
core/src/database/models/original_video/: mod.rs  with.rs
core/src/database/models/video/: mod.rs  stage.rs  with.rs
core/src/database/queries/: channel.rs  filter.rs  macros.rs  mod.rs  original_video.rs  pagination.rs  storage.rs  subtitling.rs  transcription.rs  translation.rs  user.rs  video.rs  video_channel.rs  video_error.rs
core/src/database/queries/channel/: mod.rs
core/src/database/queries/filter/: helper.rs  mod.rs
core/src/database/queries/fixtures/: channel.sql  user.sql  users.sql  video_storage.sql  videos.sql  videos_subtitlings.sql  videos_transcriptions.sql
core/src/database/queries/original_video/: mod.rs  with_video.rs
core/src/database/queries/test/: channel.rs  macros.rs  mod.rs  original_video.rs  storage.rs  subtitling.rs  transcription.rs  translation.rs  user.rs  video.rs  video_channel.rs  video_error.rs
core/src/database/queries/test/fixtures/: channels.sql  forgotten_users.sql  original_video_with_videos.sql  original_videos.sql  service_providers.sql  user.sql  video.sql  video_storage.sql  videos.sql  videos_errors.sql  videos_subtitlings.sql  videos_transcriptions.sql
core/src/database/queries/video/: mod.rs  with_channel.rs  with_original.rs
core/src/internals/: mod.rs
core/src/internals/cloud/: mod.rs
core/src/internals/cloud/aws/: mod.rs  payload.rs  s3.rs  sqs.rs
core/src/internals/cloud/mock/: mod.rs
core/src/internals/cloud/models/: payload.rs
core/src/internals/cloud/traits/: mod.rs
core/src/internals/subtitler/: mod.rs
core/src/internals/subtitler/local/: mod.rs  util.rs
core/src/internals/subtitler/traits/: mod.rs
core/src/internals/subtitler/videobox/: mod.rs
core/src/internals/transcriber/assembly_ai/: mod.rs
core/src/internals/transcriber/assembly_ai/payload/: response.rs
core/src/internals/transcriber/traits/: mod.rs
core/src/internals/translator/: mod.rs
core/src/internals/translator/deepl/: mod.rs  payload.rs
core/src/internals/translator/google_v2/: mod.rs  payload.rs
core/src/internals/translator/traits/: mod.rs
core/src/internals/video_platform/: mod.rs
core/src/internals/video_platform/errors/: mod.rs
core/src/internals/video_platform/youtube/: channel_info.rs  client.rs  traits.rs
core/src/internals/youtube_client/: channel_info.rs  client.rs  client_secret.rs  mod.rs  traits.rs  upload_delegator.rs
core/src/internals/yt_downloader/: mod.rs
core/src/internals/yt_downloader/traits/: mod.rs
core/src/internals/yt_downloader/yt_dl/: mod.rs
core/src/util/: ffmpeg.rs  fs.rs  mod.rs  queue.rs  srt.rs
core/src/util/ffmpeg/: error.rs  ffprobe.rs  mod.rs  time.rs
core/src/util/security/: hash.rs
env/: .env.esc
macros/: Cargo.toml
macros/src/: filtration.rs  lib.rs  pagination.rs  utils.rs
macros/src/filtration/: date.rs  mod.rs  test.rs
macros/tests/: filtrate_test.rs  paginate_test.rs
macros/tests/database/queries/: filter.rs  pagination.rs
queue/: Cargo.toml  Dockerfile
queue/src/: main.rs  worker.rs
queue/src/error/: mod.rs
queue/src/handlers/: cut_video.rs  download_video.rs  mod.rs  processed_upload.rs  raw_upload.rs  transcription.rs  translation.rs
queue/src/srt/: mod.rs
queue/src/workers/: heavy.rs  light.rs  mod.rs
(+121 files in other folders)
