[package]
name = "video-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["json"] }
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }