[package]
name = "video-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["json"] }
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_sqs = "0.48.0"
async-std = "1.12"
futures = "0.3.28"
uuid = { version = "0.8", features = ["v4"] }
async-trait = "0.1.68"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls","postgres", "macros","uuid"] }