[package]
name = "marco-polo-rs-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "marco-polo-rs-api"
path = "src/main.rs"

[dependencies]
marco-polo-rs-core = { path = "../core" }
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4"
dotenv = "0.15.0"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls","postgres", "macros","uuid","chrono","offline"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
async-trait = "0.1.68"
futures = "0.3.28"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.5.4"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
chrono = "0.4.24"