[package]
name = "marco-polo-rs-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "marco-polo-rs-cli"
path = "src/main.rs"

[dependencies]
marco-polo-rs-core = { path = "../core" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.3.12", features = ["derive"]}
futures = "0.3.28"