[package]
name = "marco-polo-rs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11", features = ["json"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_sqs = "0.48.0"
futures = "0.3.28"
uuid = { version = "1.2", features = ["v4","serde"] }
async-trait = "0.1.68"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls","postgres", "macros","uuid","chrono","offline"] }
chrono = "0.4.24"