[package]
name = "marco-polo-rs-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "marco_polo_rs_core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marco-polo-rs-macros = { path = "../macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11", features = ["json"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential =  "0.48.0"
rusoto_sqs = "0.48.0"
futures = "0.3.28"
uuid = { version = "1.2", features = ["v4","serde"] }
async-trait = "0.1.68"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls","postgres", "macros","uuid","chrono"] }
chrono = "0.4.24"
bcrypt = "0.15.0"
google-youtube3 = "5.0.2"
oauth2 = {version = "4.4.0", default-features = false, features = ["reqwest"]}
hyper-tls = "0.5.0"
ring = "0.16"

[dev-dependencies]
cargo-husky = { version ="1.5.0", default-features=false, features = ["user-hooks"] }
dotenv = "0.15.0"
