[package]
name = "marco-polo-rs-macros"
version = "0.1.0"
edition = "2021"

[lib]
name = "marco_polo_rs_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2", features = ["derive", "printing", "extra-traits"] }
quote = "1"
proc-macro2 = "1.0.63"
heck = "0.4.1"
deluxe = "0.5.0"


[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls","postgres"] }