[package]
name = "marco-polo-rs-queue"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "marco-polo-rs-queue"
path = "src/main.rs"

[dependencies]
marco-polo-rs-core = { path = "../core" }
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
futures = "0.3.28"
chrono = "0.4.24"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls","postgres", "macros","uuid","chrono","offline"] }
dotenv = "0.15.0"
num_cpus = "1.15.0"
async-trait = "0.1.68"
